Fixes bug where pawn cannot proceed to the last row for a promotion when the cell is empty due to out of bounds error

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ img {
     -webkit-user-drag: none;
 }
 
+h3 {
+    text-align: center;
+}
+
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     20% { transform: translate(-3px, 0px) rotate(1deg); }
